--- a/Presentation/formatting.css
+++ b/Presentation/formatting.css
@@ -18,78 +18,126 @@ and open the template in the editor.
 @charset "utf-8";
 /* CSS Document */
 
-body, html {
-    background-image: url(images/backgrounds/b31.png);
-	background-repeat: no-repeat;
-	line-height: 1;
-	font-family: cursive;
-	margin:0;
-	padding:0;
-	height:100%;
-	width:100%;
+body,
+html {
+  background-image: url(images/backgrounds/b31.png);
+  background-repeat: no-repeat;
+  line-height: 1;
+  font-family: cursive;
+  margin: 0;
+  padding: 0;
+  width: 100%;
 }
 
 span {
-	color: #980400;
+  color: #980400;
+  text-shadow: -1px -1px 0 white, 1px -1px 0 white, -1px 1px 0 white,
+    1px 1px 0 white;
 }
 
-
-
-
-#bgimage { position:fixed; 
-	left:0; 
-	top:0; 
-	z-index:1; 
-	height:100%;
-	width:100%; 
+/* DESHAUNE ADDITIONS */
+span img {
+  width: 100%;
+  margin-left: auto !important;
+  margin-right: auto !important;
+  margin-top: 20px;
+  margin-bottom: 10px;
+  box-shadow: 1px 1px 3px black;
+  box-sizing: border-box;
+}
+#content {
+  margin-bottom: 20px;
+}
+.chart {
+  margin-top: 20px;
+  margin-bottom: 10px;
+  box-shadow: 1px 1px 3px black;
+  box-sizing: border-box;
+}
+#nav-container {
+  width: 100%;
+  background-color: #f2f2f2;
+  position: fixed;
+  box-shadow: 1px 1px 2px black;
+}
+#nav {
+  margin-left: auto;
+  margin-right: auto;
+}
+#nav img {
+  height: 40px;
+}
+/* #nav .active {
+  background-color: black;
+} */
+#content-container {
+  margin-top: 120px;
+  margin-bottom: 20px;
 }
 
-#content { position: absolute; 
-	z-index:70; 
-	height:100%; 
-	width:100%; 
+/* END */
+
+#bgimage {
+  position: fixed;
+  left: 0;
+  top: 0;
+  z-index: 1;
+  height: 100%;
+  width: 100%;
 }
 
-table, tr, td, iframe {
-	padding: 0;
-	margin: 0;
-	border: 0;
-	border-collapse: collapse;
-	border-spacing: 0;
+#content {
+  position: absolute;
+  z-index: 70;
+  height: 100%;
+  width: 100%;
+}
+
+table,
+tr,
+td,
+iframe {
+  padding: 0;
+  margin: 0;
+  border: 0;
+  border-collapse: collapse;
+  border-spacing: 0;
 }
 
 img {
-	border: none;	
+  border: none;
 }
 
 hr {
-    border: none;
-    height: 2px;
-    /* Set the hr color */
-    color: #344E98; /* old IE */
-    background-color: #344E98; /* Modern Browsers */
+  border: none;
+  height: 2px;
+  /* Set the hr color */
+  color: #344e98; /* old IE */
+  background-color: #344e98; /* Modern Browsers */
 }
 
 @font-face {
-	font-family: cursive;
-    src: url('fonts/NexaRustSlab-BlackShadow01-Free-webfont.eot');
-    src: url('fonts/NexaRustSlab-BlackShadow01-Free-webfont.eot?#iefix') format('embedded-opentype'),
-         url('fonts/NexaRustSlab-BlackShadow01-Free-webfont.woff2') format('woff2'),
-         url('fonts/NexaRustSlab-BlackShadow01-Free-webfont.woff') format('woff'),
-         url('fonts/NexaRustSlab-BlackShadow01-Free-webfont.ttf') format('truetype'),
-         url('fonts/NexaRustSlab-BlackShadow01-Free-webfont.svg#nexa_rust_slabblack_shadow_01') format('svg');
-    font-weight: normal;
-    font-style: normal;
-	font-weight: normal;
-	font-style: normal;
+  font-family: cursive;
+  src: url("fonts/NexaRustSlab-BlackShadow01-Free-webfont.eot");
+  src: url("fonts/NexaRustSlab-BlackShadow01-Free-webfont.eot?#iefix")
+      format("embedded-opentype"),
+    url("fonts/NexaRustSlab-BlackShadow01-Free-webfont.woff2") format("woff2"),
+    url("fonts/NexaRustSlab-BlackShadow01-Free-webfont.woff") format("woff"),
+    url("fonts/NexaRustSlab-BlackShadow01-Free-webfont.ttf") format("truetype"),
+    url("fonts/NexaRustSlab-BlackShadow01-Free-webfont.svg#nexa_rust_slabblack_shadow_01")
+      format("svg");
+  font-weight: normal;
+  font-style: normal;
+  font-weight: normal;
+  font-style: normal;
 }
- /*
+/*
  src: local('‚ò∫'), url('fonts/YEWBN___.ttf') format('truetype');
  src: local('‚ò∫'), url('fonts/RifficFree-Bold.ttf') format('truetype');
  src: local('‚ò∫'), url('fonts/helsinki.ttf') format('truetype');
  */
- 
- /*
+
+/*
  the original code here:
  @font-face {
 	font-family: 'KulminoituvaRegular';
@@ -99,8 +147,8 @@ hr {
 	font-style: normal;
 }
  */
- 
- /*
+
+/*
 @font-face {
     font-family: 'nexa_rust_slabblack_shadow_01';
     src: url('fonts/NexaRustSlab-BlackShadow01-Free-webfont.eot');
@@ -115,79 +163,81 @@ hr {
  */
 
 h1 {
-        color: #344E98;
-        font-size: 3vh;
- }
+  color: #344e98;
+  font-size: 3vh;
+}
 
 p {
-        color: #344E98;
-        font-size: 2vh;
- }
-    
+  color: #344e98;
+  font-size: 2vh;
+}
+
 * {
-	padding: 0;
-	margin: 0;	
+  padding: 0;
+  margin: 0;
 }
 
 ul {
-	display: inline-block;
-    list-style-type: none;
+  display: inline-block;
+  list-style-type: none;
 }
 
 ul li {
-	float: left;
-	list-style: none;
-	margin-right: 1vh;
-	font-family: cursive;
-	font-size: 3vh;
-	padding: 1vh;
-	vertical-align: bottom;
+  float: left;
+  list-style: none;
+  margin-right: 1vh;
+  font-family: cursive;
+  font-size: 3vh;
+  padding: 1vh;
+  vertical-align: bottom;
 }
- 
+
 li a {
-	color: azure;
-	text-decoration: none;
-	float: left;
-	font-size: 3vh;
-	padding: 1vh;
-	vertical-align: bottom;
+  color: azure;
+  text-decoration: none;
+  float: left;
+  font-size: 3vh;
+  padding: 1vh;
+  vertical-align: bottom;
 }
 
 11 a:hover {
-	color: #;
+  color: #;
 }
 
 .all a:hover {
-	color: azure;
-	-webkit-transition:All .25s ease-in-out;
-	-moz-transition:All .25s ease-in-out;
-	-o-transition:All .25s ease-in-out;
-	-webkit-transform: rotate(0deg) scale(1.5);
-	-moz-transform: rotate(0deg) scale(1.5);
-	-o-transform: rotate(0deg) scale(1.5);
+  color: azure;
+  -webkit-transition: All 0.25s ease-in-out;
+  -moz-transition: All 0.25s ease-in-out;
+  -o-transition: All 0.25s ease-in-out;
+  -webkit-transform: rotate(0deg) scale(1.5);
+  -moz-transform: rotate(0deg) scale(1.5);
+  -o-transform: rotate(0deg) scale(1.5);
 }
 
-	nav ul ul {
-		background: #344E98; border-radius: 0px; padding: 0;
-		position: absolute; top: 100%;
-		
-	}
-		nav ul ul li {
-			float: none; 
-			border-top: 1px solid #ffffff;
-			border-bottom: 1px solid #ffffff; position: relative;
-		}
-			nav ul ul li a {
-				padding: 1vh 1vh;
-				color: #fff;
-				width: auto;
-			}	
-				nav ul ul li a:hover {
-					background: #344E98;
-				}
+nav ul ul {
+  background: #344e98;
+  border-radius: 0px;
+  padding: 0;
+  position: absolute;
+  top: 100%;
+}
+nav ul ul li {
+  float: none;
+  border-top: 1px solid #ffffff;
+  border-bottom: 1px solid #ffffff;
+  position: relative;
+}
+nav ul ul li a {
+  padding: 1vh 1vh;
+  color: #fff;
+  width: auto;
+}
+nav ul ul li a:hover {
+  background: #344e98;
+}
 
-
- /*
+/*
 .right img:hover {
 	-webkit-transition:All .5s ease-in-out;
 	-moz-transition:All .5s ease-in-out;
